--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "app"
   ],
   "author": "Emiliano",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3"
+  }
 }
